    - The 'main-story' component is linked to the main card on the homepage (via the 'read more' button)
    - the login page is now active and can be reached through the corresponding  button
    - All base-level genre filters in the dropdown search bar are now linked to corresponding components.

While this is only seems like 3 different routings,, the genre routing is actually comprised of 9 different routing components, meaning that,
in total, this site now contains 11 different routing coponents.  The following components are accessible under the genre dropdown.
    - Alternative
    - Ambient
    - Electronic
    - Experimental
    - Hip-hop/Rap
    - Metal
    - Pop
    - Punk
    - Rock

Thank you so much for this extended grace period.  I genuinely appreciate it!

(02/23/22)
Just a reminder that I have pre-approved bonus points for this week carried over from last week, as I had created more than double the amount
of required router components.
    - Flex Layout was implemented into the home page to get the story cards aligned properly.  The main story is now aligned horizontally and centerd
    with the side story card, which remain vertically aligned.  Thi was done with 2 flex layout methods.
EXTRA (Possibly for next week?)
    - Added some fluid containers where I will put the remainder of my homepage.  These are accurate to the website, 
    and are currently labeled as "DIV1, "DIV2", and DIV3".
    - Started creating the basics of a log in page.  Currently very ugly.

(03/02/22)
Created a backend with user info as shown in the lecture exactly as presented by Nikola.

(03/23/22)
Set up my project with a firebase realtime database and URL.  All firebase imports have been made in the project.
I'm still having some issues getting my backend info into my site.  Not entirely sure why.  Will reach out for direction soon.

(03/31/22)
Set up my form to add stories. Now I can add these to my backend.  This can be done from the "admin" page.
