@@ -1,0 +1,30 @@
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)"> 
+
+                <div class="input-group">
+                    <span class="input-group-text">
+                        email
+                    </span>
+                    <input type="text" class="form-control" placeholder="email" ngModel name="email" required email>
+                </div>
+
+                <div class="input-group">
+                    <span class="input-group-text">
+                        password
+                    </span>
+                    <input type="password" class="form-control" placeholder="password" ngModel name="password" required password>
+                </div>
+
+                <button class="btn" type="submit" [disabled]="!authForm.valid">
+                    Log In
+                </button>
+                
+                <button class="btn" type="submit" [disabled]="!authForm.valid">
+                    Sign Up
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
