@@ -45,3 +45,6 @@ I'm still having some issues getting my backend info into my site.  Not entirely
 (03/31/22)
 Set up my form to add stories. Now I can add these to my backend.  This can be done from the "admin" page.
 
+(04/14/2022)
+Added firebase authentication to my project.  Some minor issues were found in my project's link to firebase, but I believe all was fixed.
+
